--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p><iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS2YkSw5H3qx9tzYctrOIQDc4wYYHrbLzSdzXVNvYv_u1m1w8uLvfHa1mevuTOc6NIflLQnSlO2-i-T/pubchart?oid=1007901146&amp;format=interactive"></iframe>.</p>
   </body>
 </html>
